--- a/style.css
+++ b/style.css
@@ -131,5 +131,47 @@ transform: translateX(-50%);
     background-color: blueviolet;
    }
 
+   .list-score h2 {
+    display: block;
+    text-align: left;
+    margin-left: 35%;
+    padding-top: 75px;
+    font-size: 45px;
+    font-weight: bold;
+   }
+
+   .list-score ul  {
+    color: black;
+    background-color: rgb(128, 128, 128, .4);
+    font-size: 20px;
+    height: 30px;
+    width: 150px;
+    display: block;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-left: 35%;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    text-align: left; 
+   }
+
+
+
+   
+
+   .list-score button {
+    color: white;
+    display: block;
+    background-color: rgb(67, 4, 150);
+    height: 25px;
+    width: 100px;
+    font-size: 16px;
+    margin-left: 35%;
+   }
+
+   .list-score button:hover {
+    background-color: blueviolet;
+   }
+
    
 
