--- a/style.css
+++ b/style.css
@@ -140,11 +140,11 @@ transform: translateX(-50%);
     font-weight: bold;
    }
 
-   .list-score ul  {
+   .list-score ol  {
     color: black;
     background-color: rgb(128, 128, 128, .4);
     font-size: 20px;
-    height: 30px;
+    height: auto;
     width: 150px;
     display: block;
     padding-top: 10px;
@@ -155,9 +155,6 @@ transform: translateX(-50%);
     text-align: left; 
    }
 
-
-
-   
 
    .list-score button {
     color: white;
